<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.crina.nvimage.UploadedPictureEdit">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">


    </FrameLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="305dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="85dp"

        android:longClickable="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        />

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        android:id="@+id/linearLayoutHome">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:isScrollContainer="true"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/GreyScale"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:onClick="filterButtonAction"
                    android:tag="GreyScale"
                    app:srcCompat="@drawable/gray" />

                <ImageButton
                    android:id="@+id/Sepia"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:onClick="filterButtonAction"
                    android:tag="Sepia"
                    app:srcCompat="@drawable/sepia" />
                <ImageButton
                    android:id="@+id/Warmer"
                    android:layout_marginRight="10dp"
                    android:onClick="filterButtonAction"
                    android:tag="Warmer"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/warmer" />
                <ImageButton
                    android:id="@+id/Cold"
                    android:layout_marginRight="10dp"
                    android:layout_width="80dp"
                    android:onClick="filterButtonAction"
                    android:tag="Cold"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cold" />
                <ImageButton
                    android:id="@+id/AccentColor"
                    android:layout_marginRight="10dp"
                    android:layout_width="80dp"
                    android:onClick="filterButtonAction"
                    android:tag="AccentColor"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/accent" />
                <ImageButton
                    android:id="@+id/White"
                    android:layout_marginRight="10dp"
                    android:layout_width="80dp"
                    android:onClick="filterButtonAction"
                    android:tag="White"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/white" />
                <ImageButton
                    android:id="@+id/Ghost"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:onClick="filterButtonAction"
                    android:tag="Ghost"
                    app:srcCompat="@drawable/ghost" />
                <ImageButton
                     android:id="@+id/Ice"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:onClick="filterButtonAction"
                     android:tag="Ice"
                     app:srcCompat="@drawable/ice" />

                <ImageButton
                    android:id="@+id/TvShow"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:onClick="filterButtonAction"
                    android:tag="TvShow"
                    app:srcCompat="@drawable/tv" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayoutDash"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:isScrollContainer="true"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/customcropcropbutton"
                    android:onClick="cropButtonAction"
                    android:text="Crop"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/custommvbutton"
                    android:onClick="mirrorButtonAction"
                    android:tag="Horizontal"
                    android:text="Horizontal"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/custommhbutton"
                    android:onClick="mirrorButtonAction"
                    android:tag="Vertical"
                    android:text="Vertical"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/customrotatebutton"
                    android:onClick="rotateButtonActin"
                    android:text="Rotate"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNot"
        android:layout_width="339dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        android:layout_marginBottom="6dp">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:isScrollContainer="true"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:background="@drawable/nvibutton"
                    android:onClick="contrastButtonAction"
                    android:text="Contrast"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/nvibutton"
                    android:onClick="rgbButtonAction"
                    android:text="RGB"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/nvibutton"
                    android:onClick="brightnessButtonAction"
                    android:text="Luminozitate"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:onClick="saveButtonAction"
        android:text="SAVE"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/undo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/undo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="16dp"

        android:longClickable="?attr/isLightTheme"
        android:onClick="undoChange"
        android:text="Undo"
        app:layout_constraintLeft_toRightOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/redu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="redoChange"
        android:text="Redo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/undo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>